k8s/03-typesense-scraper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typesense-scraper
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: typesense-scraper
  template:
    metadata:
      labels:
        app: typesense-scraper
    spec:
      containers:
        - name: typesense-scraper
          image: typesense/docsearch-scraper:0.7.0
