k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: procyon-webui-v2-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: godaddydns-procyon-letsencrypt-issuer
    k8s.kuboard.cn/displayName: procyon-webui-v2
    k8s.kuboard.cn/workload: procyon-webui-v2
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.procyon.vip'
        - procyon.vip
      secretName: procyon-vip-tls
    - hosts:
        - www.npool.top
        - npool.top
      secretName: npool-top-tls
  rules:
    - host: www.procyon.vip
      http:
        paths:
          - path: /
            backend:
              serviceName: procyon-webui-v2
              servicePort: 80
    - host: procyon.vip
      http:
        paths:
          - path: /
            backend:
              serviceName: procyon-webui-v2
              servicePort: 80
    - host: www.npool.top
      http:
        paths:
          - path: /
            backend:
              serviceName: procyon-webui-v2
              servicePort: 80
